fix letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
   line-height: 30px;
   color: #333333;
   background-color: white;
+  letter-spacing: 0.01em;
 }
 
 
@@ -79,6 +80,7 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
+  letter-spacing: 0.01em;
 }
 
 .logo_header {
@@ -101,6 +103,7 @@ body {
   font-size: 15px;
   line-height: 36px;
   text-decoration: none;
+  letter-spacing: 0.01em;
 }
 
 .page-header__user-menu .user-menu__link {
@@ -122,7 +125,7 @@ body {
   line-height: normal;
   text-decoration: none;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0.2em;
 }
 
 .page-header__main-menu .main-menu__link {
@@ -144,6 +147,7 @@ body {
   line-height: 36px;
   text-decoration: none;
   color: #000000;
+  letter-spacing: 0.01em;
 }
 
 .popular-products {
@@ -156,6 +160,7 @@ body {
   font-size: 180px;
   line-height: 180px;
   color: #ffffff;
+  letter-spacing: 0.01em;
 }
 
 .popular-products__lead {
@@ -164,6 +169,7 @@ body {
   font-size: 47px;
   line-height: normal;
   color: #000000;
+  letter-spacing: 0.01em;
 }
 
 .popular-products__description {
@@ -172,6 +178,7 @@ body {
   font-size: 15px;
   line-height: 30px;
   color: #464646;
+  letter-spacing: 0.01em;
 }
 
 .popular-products__property-name {
@@ -180,6 +187,7 @@ body {
   font-size: 13px;
   line-height: 20px;
   color: #464646;
+  letter-spacing: 0.01em;
 }
 
 .popular-products__property-value {
@@ -188,6 +196,7 @@ body {
   font-size: 36px;
   line-height: normal;
   color: #000000;
+  letter-spacing: 0.01em;
 }
 
 .categories {
@@ -201,11 +210,30 @@ body {
   line-height: normal;
   text-decoration: none;
   color: #000000;
+  letter-spacing: 0.01em;
 }
 
 .services {
   color: #464646;
   background-color: #e5e5e5;
+}
+
+.services__title {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: bold;
+  font-size: 47px;
+  line-height: normal;
+  color: #000000;
+  letter-spacing: 0.01em;
+}
+
+.services__text {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 30px;
+  color: #464646;
+  letter-spacing: 0.01em;
 }
 
 .section-title {
@@ -214,6 +242,7 @@ body {
   font-size: 47px;
   line-height: normal;
   color: #000000;
+  letter-spacing: 0.01em;
 }
 
 .section-text {
@@ -222,6 +251,7 @@ body {
   font-size: 15px;
   line-height: 30px;
   color: #464646;
+  letter-spacing: 0em;
 }
 
 .delivery-methods {
@@ -234,6 +264,7 @@ body {
   font-size: 16px;
   line-height: 40px;
   color: #000000;
+  letter-spacing: 0em;
 }
 
 .address,
@@ -243,6 +274,7 @@ body {
   font-size: 15px;
   line-height: 30px;
   color: #ffffff;
+  letter-spacing: 0em;
 
 }
 
@@ -265,4 +297,5 @@ body {
   font-size: 18px;
   line-height: 18px;
   color: #000000;
+  letter-spacing: 0em;
 }
